--- a/styles.css
+++ b/styles.css
@@ -1,125 +1,1 @@
-body {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-}
-
-.background-video {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}
-
-video {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-}
-
-.content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  z-index: 1;
-}
-.welcome-container {
-  display: flex;
-  align-items: center;
-}
-
-.gif-image {
-  width: 100px;
-  height: 100px;
-  margin-left: 20px;
-  opacity: 0; /* GIF initialement invisible */
-  animation: fadeIn 2s ease-in-out forwards, slideInFromRight 1.5s ease-in-out forwards, rotate 4s linear infinite; /* Animation de fondu, balayage depuis la droite, et rotation */
-}
-
-@keyframes slideInFromRight {
-  0% {
-    transform: translateX(100%);
-  }
-  100% {
-    transform: translateX(0);
-  }
-}
-
-
-
-h1 {
-  font-size: 100px;
-  color: white;
-  font-family: 'Cotane Beach', cursive;
-  opacity: 0;
-  animation: fadeIn 2s ease-in-out forwards, slideIn 1.5s ease-in-out forwards;
-}
-.social-buttons {
-  margin-top: 20px;
-  opacity: 0;
-  animation: fadeIn 2s ease-in-out 1s forwards, slideInFromTop 1.5s ease-in-out 1s forwards;
-}
-
-.gif-image {
-  width: 100px;
-  height: 100px;
-  margin-left: 20px;
-  opacity: 0;
-  animation: fadeIn 2s ease-in-out forwards, slideInFromRight 1.5s ease-in-out forwards, rotate 4s linear infinite;
-}
-
-@keyframes fadeIn {
-  0% { opacity: 0; }
-  100% { opacity: 1; }
-}
-
-@keyframes slideIn {
-  0% {
-    transform: translateX(-50%);
-  }
-  100% {
-    transform: translateX(0);
-  }
-}
-
-@keyframes slideInFromTop {
-  0% {
-    transform: translateY(-50px);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-@keyframes slideInFromRight {
-  0% {
-    transform: translateX(100%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-
-
-
-.social-buttons {
-  margin-top: 20px;
-}
-
-.social-buttons a {
-  display: inline-block;
-  margin: 0 10px;
-}
-
-.social-buttons img {
-  width: 60px; /* Augmente la largeur */
-  height: 60px; /* Augmente la hauteur */
-}
+.background-video{position:fixed;}.background-video{top:0;}.background-video{left:0;}video,.background-video{width:100%;}.background-video,video{height:100%;}body{margin-left:0;}.background-video{z-index:-1;}body{margin-bottom:0;}.content{position:absolute;}body{margin-right:0;}.content{top:50%;}.content{left:50%;}body{margin-top:0;}.content{transform:translate(-50%,-50%);}.content{text-align:center;}.content{z-index:1;}body{padding-left:0;}[class~=welcome-container]{display:flex;}body{padding-bottom:0;}[class~=welcome-container]{align-items:center;}body{padding-right:0;}.gif-image{width:6.25pc;}body{padding-top:0;}.gif-image{height:100px;}.gif-image{margin-left:.208333333in;}.gif-image{opacity:0;}.gif-image{animation:fadeIn 2s ease-in-out forwards,slideInFromRight 1.5s ease-in-out forwards,rotate 4s linear infinite;}body{overflow:hidden;}video{object-fit:cover;}@keyframes slideInFromRight{0%{transform:translateX(100%);}100%{transform:translateX(0);}}h1{font-size:6.25pc;}h1{color:white;}.social-buttons{margin-top:1.25pc;}h1{font-family:"Cotane Beach",cursive;}[class~=gif-image],.social-buttons,h1{opacity:0;}.social-buttons{animation:fadeIn 2s ease-in-out 1s forwards,slideInFromTop 1.5s ease-in-out 1s forwards;}h1{animation:fadeIn 2s ease-in-out forwards,slideIn 1.5s ease-in-out forwards;}[class~=gif-image]{width:6.25pc;}[class~=gif-image]{height:6.25pc;}[class~=gif-image]{margin-left:1.25pc;}[class~=gif-image]{animation:fadeIn 2s ease-in-out forwards,slideInFromRight 1.5s ease-in-out forwards,rotate 4s linear infinite;}@keyframes fadeIn{0%{opacity:0;}100%{opacity:1;}}@keyframes slideIn{0%{transform:translateX(-50%);}100%{transform:translateX(0);}}@keyframes slideInFromTop{0%{transform:translateY(-50px);opacity:0;}100%{transform:translateY(0);opacity:1;}}@keyframes slideInFromRight{0%{transform:translateX(100%);opacity:0;}100%{transform:translateX(0);opacity:1;}}[class~=social-buttons] a{display:inline-block;}[class~=social-buttons] a{margin-left:7.5pt;}[class~=social-buttons] a{margin-bottom:0;}[class~=social-buttons] a{margin-right:7.5pt;}[class~=social-buttons] a{margin-top:0;}.social-buttons img{width:60px;}.social-buttons img{height:3.75pc;}[class~=social-buttons]{margin-top:15pt;}
